--- a/taihuitao/BearUp.storyboard
+++ b/taihuitao/BearUp.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lV3-lG-A4h">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lV3-lG-A4h">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -45,8 +45,7 @@
                                 <rect key="frame" x="36" y="365.5" width="303" height="36"/>
                                 <color key="backgroundColor" red="1" green="0.30292009507707374" blue="0.3994753874851158" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="R4z-u3-nFO"/>
-                                    <constraint firstAttribute="height" constant="36" id="abN-st-864"/>
+                                    <constraint firstAttribute="height" constant="36" id="MMT-jM-u9T"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="注册">
@@ -192,18 +191,20 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="EFw-zp-KYX" firstAttribute="leading" secondItem="qjZ-G6-Ijr" secondAttribute="leading" constant="-5" id="0J6-Mn-Fub"/>
+                            <constraint firstItem="uYw-vL-xuO" firstAttribute="leading" secondItem="7nA-JV-DCc" secondAttribute="leadingMargin" constant="20" id="0q7-dE-Naa"/>
+                            <constraint firstItem="uYw-vL-xuO" firstAttribute="top" secondItem="ist-rS-ICM" secondAttribute="bottom" constant="50.5" id="1HY-Ku-OvP"/>
                             <constraint firstItem="cvn-VF-Tpa" firstAttribute="centerY" secondItem="qjZ-G6-Ijr" secondAttribute="centerY" id="1LT-Ge-Gyp"/>
                             <constraint firstItem="EFw-zp-KYX" firstAttribute="top" secondItem="7nA-JV-DCc" secondAttribute="topMargin" constant="140" id="3eT-yN-aqL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EFw-zp-KYX" secondAttribute="trailing" constant="15" id="4Pk-M8-2if"/>
                             <constraint firstItem="Zx5-m7-VGZ" firstAttribute="top" secondItem="gcs-Cv-UYD" secondAttribute="bottom" constant="10" id="60b-jo-6Jo"/>
                             <constraint firstItem="9eJ-JR-DV3" firstAttribute="top" secondItem="BwS-NC-o54" secondAttribute="bottom" id="8fD-Gf-Gma"/>
                             <constraint firstItem="UQ4-57-kTp" firstAttribute="leading" secondItem="qjZ-G6-Ijr" secondAttribute="leading" id="Agp-cW-mIf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="uYw-vL-xuO" secondAttribute="trailing" constant="20" id="CV4-9t-cgZ"/>
                             <constraint firstItem="EFw-zp-KYX" firstAttribute="top" secondItem="qjZ-G6-Ijr" secondAttribute="bottom" constant="10" id="CZ9-VH-ezE"/>
                             <constraint firstItem="vir-CC-os3" firstAttribute="trailing" secondItem="Zx5-m7-VGZ" secondAttribute="trailing" constant="-5" id="Ipb-pK-NRb"/>
                             <constraint firstItem="9eJ-JR-DV3" firstAttribute="leading" secondItem="EFw-zp-KYX" secondAttribute="leading" id="Irn-rk-shA"/>
                             <constraint firstItem="9eJ-JR-DV3" firstAttribute="trailing" secondItem="EFw-zp-KYX" secondAttribute="trailing" id="K4f-OH-P9X"/>
                             <constraint firstItem="9eJ-JR-DV3" firstAttribute="top" secondItem="UQ4-57-kTp" secondAttribute="bottom" constant="10" id="KbD-zF-UbU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uYw-vL-xuO" secondAttribute="trailing" constant="20" id="LNp-ti-nWr"/>
                             <constraint firstItem="EFw-zp-KYX" firstAttribute="leading" secondItem="7nA-JV-DCc" secondAttribute="leadingMargin" constant="15" id="NoM-ku-SHU"/>
                             <constraint firstItem="Zx5-m7-VGZ" firstAttribute="trailing" secondItem="EFw-zp-KYX" secondAttribute="trailing" id="PhL-64-ER6"/>
                             <constraint firstItem="EFw-zp-KYX" firstAttribute="trailing" secondItem="cvn-VF-Tpa" secondAttribute="trailing" id="RGD-Yk-MvO"/>
@@ -212,10 +213,8 @@
                             <constraint firstItem="QT3-me-o4X" firstAttribute="centerY" secondItem="ist-rS-ICM" secondAttribute="centerY" id="YAi-xx-mkA"/>
                             <constraint firstItem="gcs-Cv-UYD" firstAttribute="centerY" secondItem="GG4-OL-Z0S" secondAttribute="centerY" id="ZAR-9i-91p"/>
                             <constraint firstItem="Zx5-m7-VGZ" firstAttribute="leading" secondItem="EFw-zp-KYX" secondAttribute="leading" id="ZTj-wL-XBz"/>
-                            <constraint firstItem="uYw-vL-xuO" firstAttribute="leading" secondItem="7nA-JV-DCc" secondAttribute="leadingMargin" constant="20" id="Zo1-N7-TKy"/>
                             <constraint firstItem="Zx5-m7-VGZ" firstAttribute="top" secondItem="9eJ-JR-DV3" secondAttribute="bottom" constant="50" id="aZ4-Ua-9em"/>
                             <constraint firstItem="QT3-me-o4X" firstAttribute="top" secondItem="Zx5-m7-VGZ" secondAttribute="bottom" constant="30" id="cYZ-to-Xfk"/>
-                            <constraint firstItem="uYw-vL-xuO" firstAttribute="centerX" secondItem="7nA-JV-DCc" secondAttribute="centerX" id="eTh-9D-9lm"/>
                             <constraint firstItem="BwS-NC-o54" firstAttribute="leading" secondItem="MnA-EI-q96" secondAttribute="trailing" id="fPI-ZD-1yS"/>
                             <constraint firstItem="Zx5-m7-VGZ" firstAttribute="leading" secondItem="gcs-Cv-UYD" secondAttribute="leading" constant="-5" id="fbN-D2-zrn"/>
                             <constraint firstItem="vir-CC-os3" firstAttribute="leading" secondItem="GG4-OL-Z0S" secondAttribute="trailing" constant="10" id="hhO-eN-cpU"/>
@@ -223,7 +222,6 @@
                             <constraint firstItem="BwS-NC-o54" firstAttribute="trailing" secondItem="9eJ-JR-DV3" secondAttribute="trailing" id="oDt-5l-pJg"/>
                             <constraint firstItem="GG4-OL-Z0S" firstAttribute="leading" secondItem="gcs-Cv-UYD" secondAttribute="trailing" constant="10" id="qhu-N2-Z0B"/>
                             <constraint firstItem="ist-rS-ICM" firstAttribute="leading" secondItem="QT3-me-o4X" secondAttribute="trailing" constant="10" id="rz1-5B-Qqx"/>
-                            <constraint firstItem="uYw-vL-xuO" firstAttribute="centerY" secondItem="7nA-JV-DCc" secondAttribute="centerY" constant="50" id="sAH-Rl-Q7r"/>
                             <constraint firstItem="UQ4-57-kTp" firstAttribute="centerY" secondItem="MnA-EI-q96" secondAttribute="centerY" id="tGc-eo-yPi"/>
                             <constraint firstItem="QT3-me-o4X" firstAttribute="leading" secondItem="gcs-Cv-UYD" secondAttribute="leading" id="ug7-uF-ISz"/>
                             <constraint firstItem="Zx5-m7-VGZ" firstAttribute="top" secondItem="vir-CC-os3" secondAttribute="bottom" constant="10" id="vFt-wc-WeO"/>
@@ -261,7 +259,7 @@
                                 <rect key="frame" x="36" y="365.5" width="303" height="36"/>
                                 <color key="backgroundColor" red="1" green="0.30292009510000001" blue="0.3994753875" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="5pU-RL-tpm"/>
+                                    <constraint firstAttribute="height" constant="36" id="diU-ZF-dhj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="立即找回">
@@ -428,6 +426,7 @@
                             <constraint firstItem="ewE-lZ-xdG" firstAttribute="top" secondItem="ONf-PA-NMA" secondAttribute="bottom" constant="10" id="EtL-8W-XTg"/>
                             <constraint firstItem="BaZ-FL-XcD" firstAttribute="centerY" secondItem="2dx-7s-e5B" secondAttribute="centerY" id="FSY-QB-Jzt"/>
                             <constraint firstItem="ewE-lZ-xdG" firstAttribute="leading" secondItem="Ieb-pK-gwr" secondAttribute="leading" id="Fwg-8t-13G"/>
+                            <constraint firstItem="aVf-2O-Kg8" firstAttribute="top" secondItem="ewE-lZ-xdG" secondAttribute="bottom" constant="71.5" id="GVe-hw-rco"/>
                             <constraint firstItem="Ieb-pK-gwr" firstAttribute="top" secondItem="tZp-yM-KEp" secondAttribute="bottom" id="HTI-L2-RkE"/>
                             <constraint firstItem="BaZ-FL-XcD" firstAttribute="leading" secondItem="rdP-YO-zyE" secondAttribute="trailing" constant="10" id="Iuv-AV-SQN"/>
                             <constraint firstItem="2dx-7s-e5B" firstAttribute="leading" secondItem="XfG-7w-InD" secondAttribute="leading" id="O9M-h0-9tf"/>
@@ -435,29 +434,27 @@
                             <constraint firstItem="Qlx-rJ-NWU" firstAttribute="trailing" secondItem="ewE-lZ-xdG" secondAttribute="trailing" id="POc-MA-9Fg"/>
                             <constraint firstItem="rdP-YO-zyE" firstAttribute="leading" secondItem="2dx-7s-e5B" secondAttribute="trailing" constant="10" id="PgI-iL-Sej"/>
                             <constraint firstItem="Ieb-pK-gwr" firstAttribute="top" secondItem="XfG-7w-InD" secondAttribute="bottom" constant="10" id="QFT-97-EWy"/>
+                            <constraint firstItem="aVf-2O-Kg8" firstAttribute="leading" secondItem="zFe-Ge-IXG" secondAttribute="leadingMargin" constant="20" id="RQ1-Ii-Sj0"/>
                             <constraint firstItem="Ieb-pK-gwr" firstAttribute="leading" secondItem="XfG-7w-InD" secondAttribute="leading" constant="-5" id="Slc-sD-bbU"/>
                             <constraint firstItem="BWT-53-LoI" firstAttribute="leading" secondItem="Ieb-pK-gwr" secondAttribute="leading" id="SoL-Pa-ZXX"/>
                             <constraint firstItem="rdP-YO-zyE" firstAttribute="leading" secondItem="2dx-7s-e5B" secondAttribute="trailing" constant="10" id="UUQ-iO-nrk"/>
                             <constraint firstItem="Ieb-pK-gwr" firstAttribute="leading" secondItem="zFe-Ge-IXG" secondAttribute="leadingMargin" constant="15" id="UxS-WV-Tox"/>
                             <constraint firstItem="dv8-dZ-ITp" firstAttribute="leading" secondItem="XfG-7w-InD" secondAttribute="trailing" constant="10" id="XVp-6G-4uW"/>
                             <constraint firstItem="BaZ-FL-XcD" firstAttribute="trailing" secondItem="BWT-53-LoI" secondAttribute="trailing" id="XYm-kQ-hDV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aVf-2O-Kg8" secondAttribute="trailing" constant="20" id="Zjk-f5-5cj"/>
                             <constraint firstItem="7BJ-Uh-uTA" firstAttribute="top" secondItem="kOH-Zw-QeS" secondAttribute="bottom" constant="10" id="brg-jx-Ck1"/>
                             <constraint firstItem="tZp-yM-KEp" firstAttribute="leading" secondItem="dv8-dZ-ITp" secondAttribute="trailing" id="cab-Cm-SHz"/>
-                            <constraint firstItem="aVf-2O-Kg8" firstAttribute="centerX" secondItem="zFe-Ge-IXG" secondAttribute="centerX" id="dpC-gQ-adC"/>
                             <constraint firstItem="fbR-5d-Xo2" firstAttribute="leading" secondItem="ONf-PA-NMA" secondAttribute="trailing" constant="10" id="gQh-8V-d6w"/>
                             <constraint firstItem="ewE-lZ-xdG" firstAttribute="top" secondItem="BWT-53-LoI" secondAttribute="bottom" constant="50" id="i1T-8d-LhV"/>
                             <constraint firstItem="ONf-PA-NMA" firstAttribute="leading" secondItem="XfG-7w-InD" secondAttribute="leading" id="ihf-og-yN7"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="aVf-2O-Kg8" secondAttribute="trailing" constant="20" id="jBv-97-uI8"/>
                             <constraint firstItem="tZp-yM-KEp" firstAttribute="trailing" secondItem="Ieb-pK-gwr" secondAttribute="trailing" id="jDB-aT-3iB"/>
                             <constraint firstItem="Qlx-rJ-NWU" firstAttribute="leading" secondItem="fbR-5d-Xo2" secondAttribute="trailing" constant="10" id="mbs-Yn-vs8"/>
                             <constraint firstItem="rdP-YO-zyE" firstAttribute="centerY" secondItem="2dx-7s-e5B" secondAttribute="centerY" id="ndp-hM-7do"/>
                             <constraint firstItem="7BJ-Uh-uTA" firstAttribute="top" secondItem="zFe-Ge-IXG" secondAttribute="topMargin" constant="120" id="pVo-H9-LYP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7BJ-Uh-uTA" secondAttribute="trailing" constant="15" id="pcX-zY-OZ2"/>
                             <constraint firstItem="ONf-PA-NMA" firstAttribute="centerY" secondItem="fbR-5d-Xo2" secondAttribute="centerY" id="q6j-SO-iPd"/>
-                            <constraint firstItem="aVf-2O-Kg8" firstAttribute="leading" secondItem="zFe-Ge-IXG" secondAttribute="leadingMargin" constant="20" id="wGr-S2-dTy"/>
                             <constraint firstItem="7BJ-Uh-uTA" firstAttribute="leading" secondItem="zFe-Ge-IXG" secondAttribute="leadingMargin" constant="15" id="xLM-oN-3Dg"/>
                             <constraint firstItem="ewE-lZ-xdG" firstAttribute="trailing" secondItem="Ieb-pK-gwr" secondAttribute="trailing" id="xiD-Mo-FWh"/>
-                            <constraint firstItem="aVf-2O-Kg8" firstAttribute="centerY" secondItem="zFe-Ge-IXG" secondAttribute="centerY" constant="50" id="y0s-gy-g50"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ieb-pK-gwr" secondAttribute="trailing" constant="15" id="yu5-a7-nA6"/>
                             <constraint firstItem="dv8-dZ-ITp" firstAttribute="centerY" secondItem="XfG-7w-InD" secondAttribute="centerY" id="zQm-79-Ipo"/>
                             <constraint firstItem="7BJ-Uh-uTA" firstAttribute="trailing" secondItem="GaX-9P-Ile" secondAttribute="trailing" id="zce-RA-Y0x"/>
